deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: dp
spec: 
    replicas: 4
    selector:
      matchLabels:
        app: hello-app
    strategy:
      type: Recreate
    template:
      metadata: 
        labels:
          app: hello-app
      spec: 
        containers: 
        - name: hello-net
          image: masyanya101010/hw_otus_docker:v2
          ports: 
          - name: web
            containerPort: 80
