service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    app: hello-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: ClusterIP
